import React from 'react';
import { shallow } from 'enzyme';
import { shallowToJson } from 'enzyme-to-json';

import PostView from '../PostDetails';

jest.mock('../components/SocialMedia', () => 'Social media test');

describe('Post card', () => {
  it('should render post with image placeholder', () => {
    const mockPost = {
      id: 1,
      title: {
        rendered: 'Mock title',
      },
      author: 45,
      _embedded: {
        author: 'Some mock author',
        'wp:term': [[{ id: 1, name: 'Some category' }, { id: 2, name: 'Some category' }, { id: 3, name: 'Some category' }]],
      },
      categories: [2, 54, 23, 6],
      slug: 'mock-slug',
      content: {
        rendered: 'Some content that should be rendered',
        protected: false,
      },
      excerpt: {
        rendered: 'Some excerpt to be rendered',
        protected: true,
      },
      link: 'some-post-link',
      date: 'someMockDate', //TO DO : date validation => class Date
      // TO DO : proptype for image src
    };
    const category = {
      match: {
        params: {
          categoryId: '32',
          categorySlug: 'some-slug',
        },
      },
    };
    const output = shallow(<PostView post={mockPost} category={category} />);
    expect(shallowToJson(output)).toMatchSnapshot();
  });

  it('should render post with featured image', () => {
    const mockPost = {
      id: 1,
      title: {
        rendered: 'Mock title',
      },
      author: 45,
      _embedded: {
        author: 'Some mock author',
        'wp:term': [[{ id: 1, name: 'Some category' }, { id: 2, name: 'Some category' }, { id: 3, name: 'Some category' }]],
        'wp:featuredmedia': 'some-post-image',
      },
      categories: [2, 54, 23, 6],
      slug: 'mock-slug',
      content: {
        rendered: 'Some content that should be rendered',
        protected: false,
      },
      excerpt: {
        rendered: 'Some excerpt to be rendered',
        protected: true,
      },
      link: 'some-post-link',
      date: 'someMockDate', //TO DO : date validation => class Date
      // TO DO : proptype for image src
    };
    const category = {
      match: {
        params: {
          categoryId: '32',
          categorySlug: 'some-slug',
        },
      },
    };
    const output = shallow(<PostView post={mockPost} category={category} />);
    expect(shallowToJson(output)).toMatchSnapshot();
  });
});
